Fix word wrapping

--- a/site_media/css/style.css
+++ b/site_media/css/style.css
@@ -5,6 +5,7 @@
 .irc-event {
   padding: 4px 0px;
   opacity: 0.6;
+  word-wrap: break-word;
 }
 
 .irc-m {
